--- a/11.10.html
+++ b/11.10.html
@@ -17,7 +17,7 @@
     import InportedNinja from "./11.9.js"   // 导入默认导出的内容，不需要花括号，可任意指定名称
     import { compareNinjas } from "./11.9.js"   // 导入指定的内容
 
-    const ninja1 = new InportedNinja("Yoshi");
+    const ninja1 = new InportedNinja("Yoshi");   n
     const ninja2 = new InportedNinja("Hattori");
 
     assert(ninja1 !== undefined && ninja2 !== undefined,
